k3s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qatra
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
