k3s/13-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-basic-auth
  namespace: qatra
spec:
  basicAuth:
    secret: monitoring-auth
    removeHeader: true
