k3s/11-redisinsight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: qatra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
        - name: redisinsight
          image: redis/redisinsight:latest
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: qatra
spec:
  selector:
    app: redisinsight
  ports:
    - port: 8001
      targetPort: 8001
