k3s/12-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress
  namespace: qatra
spec:
  entryPoints:
    - websecure
  routes:

    - match: Host(`qatra-api.zayenha.app`) && PathPrefix(`/api/v1/notifications`)
      kind: Rule
      priority: 10
      services:
        - name: notification-service
          port: 8082

    - match: Host(`qatra-api.zayenha.app`) && PathPrefix(`/api/v1`)
      kind: Rule
      services:
        - name: donation-service
          port: 8080
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ws-ingress
  namespace: qatra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qatra-ws.zayenha.app`) && PathPrefix(`/ws`)
      kind: Rule
      services:
        - name: notification-service
          port: 8081
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: qatra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qatra-grafana.zayenha.app`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
      middlewares:
        - name: monitoring-basic-auth
          namespace: qatra
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ingress
  namespace: qatra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qatra-jaeger.zayenha.app`)
      kind: Rule
      services:
        - name: jaeger
          port: 16686
      middlewares:
        - name: monitoring-basic-auth
          namespace: qatra
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redisinsight-ingress
  namespace: qatra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qatra-redis.zayenha.app`)
      kind: Rule
      services:
        - name: redisinsight
          port: 5540
      middlewares:
        - name: monitoring-basic-auth
          namespace: qatra
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingress
  namespace: qatra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qatra-pg.zayenha.app`)
      kind: Rule
      services:
        - name: pgadmin
          port: 5050
      middlewares:
        - name: monitoring-basic-auth
          namespace: qatra
  tls:
    certResolver: letsencrypt
